# gaussian_splat_ipu

./: .gitmodules  CMakeLists.txt  README.md  utils.cmake
codelets/splat/: codelets.cpp
codelets/tests/: codelets.cpp
data/: LICENSE  cone.xyz  point_cloud_10.ply  point_cloud_11.ply  point_cloud_12.ply  point_cloud_9.ply
include/ipu/: io_utils.hpp  ipu_utils.hpp  options.hpp
include/math/: sincos.hpp
include/missing/: cfloat
include/remote_ui/: AsyncTask.hpp  InterfaceServer.hpp  VideoClient.hpp
include/splat/: camera.hpp  cpu_rasteriser.hpp  file_io.hpp  geometry.hpp  ipu_geometry.hpp  ipu_rasteriser.hpp  options.hpp  photometrics.hpp  serialise.hpp  viewport.hpp
include/tileMapping/: edge_builder.hpp  tileConfig.hpp  tile_config.hpp
src/main/: CMakeLists.txt  splat.cpp
src/splat/: CMakeLists.txt  algo.txt  camera.cpp  cpu_rasteriser.cpp  edge_builder.cpp  file_io.cpp  geometry.cpp  ipu_rasteriser.cpp
tests/: CMakeLists.txt  test.cpp
